# contentmesh-ai

./: .gitignore  README.md  READme.md  app.py  pyproject.toml  requirements.txt
frontend/: index.html
scripts/: start.sh
src/contentmesh/: analytics.py  crew.py  guardrails.py  llm_config.py  main.py
src/contentmesh/config/: agents.yaml  tasks.yaml
src/contentmesh/tools/: __init__.py  distributor_tools.py
